# ratatui-braille-bar

./: Cargo.toml  LICENSE.md  README.md  demo.tape  justfile
.github/workflows/: ci.yml  publish.yml
examples/: dashboard.rs
src/: lib.rs
