[package]
name = "ratatui-braille-bar"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Once-style braille progress bars for ratatui"
repository = "https://github.com/penso/ratatui-braille-bar"
keywords = ["ratatui", "tui", "progress", "braille", "widget"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
rand = "0.9"
ratatui = "0.29"

[dev-dependencies]
crossterm = "0.28"
